dts/testData/inspections/duplicateElement/Node.dtsi
/ {
    node {};
    <error descr="Duplicate node name">node</error> {};
};